tests/valid/macros/arrayLengthMacro.wacc
# check length of array

# Output:
# 4

# Program:

.define ARRAY [43, 2, 18, 1]

begin
  int[] a = ARRAY ;
  println len a
end
